--- a/de12/test.html
+++ b/de12/test.html
@@ -39,7 +39,7 @@
 
     </div>
     <div>
-    外部リンク
+    外部リンク<br>
     ↓XBPホームページ<br>
     <a href="../index.html">リンク</a><br>
     ↓デザイン演習１・２ホームページ<br>
