--- a/de12/field-work.html
+++ b/de12/field-work.html
@@ -11,21 +11,40 @@
     <h1 class="daimei" style="color:white">フィールドワーク</h1>
     <article>
         <div class="main">
-            <h2 class="tatenizyusen" id="1">変な車止め？</h2>
+            <h2 class="tatenizyusen" id="1">蜂のハンバーガー</h2>
+            <div class="honbun">
+                <img src="./images/Honeybee.jpg" width="40%"><br>
+                １０月１１日の金曜日に最寄り駅にて自分が撮った写真<br>
+                学校帰りに散策しようと駅を出る際に見つけたハンバーガー店の広告。<br>
+                ハンバーガーなのに蜂がマークとして出ており、「ハンバーガーで蜂、、、？」となって違和感を感じたので撮影した。<br>
+
+            </div>
+            <h3 class="tatenizyusen" id="2">メインがわからなかった広告</h3>
+            <div class="honbun">
+                <img src="./images/view.jpg" width="40%"><br>
+                １０月１１日の金曜日に最寄り駅にて自分が撮った写真<br>
+                学校帰りに散策しようと駅を出る際に見つけたカレー店の広告。<br>
+                最初は絶景の文字の主張が強かったため近くで見るまでツアーの広告と勘違いしていた。<br>
+                気づいたときに少し面白く感じたので撮影した。<br>
+
+            </div>
+            <h4 class="tatenizyusen" id="3">変な車止め</h4>
             <div class="honbun">
                 <img src="./images/odd-rock.jpg" width="40%"><br>
+                １０月５日に通学路で自分が撮影した写真<br>
                 普段はこの道を通るときはまるで気にせずに素通りしていました。<br>
                 今回のフィールドワークで散策したとき、<br>
-                よく考えれば用途が全く考えられなかった純粋階段のようなもののように感じられたため写真に残しました。<br>
+                よく考えれば用途が全く考えられなかった純粋階段のようなもののように感じられたため写真に残しました。<br><br>
+                ※追記：出された課題と合わないことに気づいたため、一番下に変更したのちに１３日にまでに二枚分の写真を追加しました。
 
             </div>
         </div>
         <nav class="mokuzi">
             <br>
             目次<br>
-            <a href="#1">変な車止め？</a><br>
-            <a href="#2"></a><br>
-            <a href="#3"></a><br>
+            <a href="#1">蜂の<br>ハンバーガー</a><br><br>
+            <a href="#2">メインが<br>分からなかった広告</a><br><br>
+            <a href="#3">へんな車止め</a><br>
             <a href="#4"></a><br>
             
         </nav>
