--- a/de12/index.html
+++ b/de12/index.html
@@ -20,7 +20,8 @@
         <h2>演習ノート一覧</h2>
         <ul>
             <li><a href="./1.html" target="_blank">第一回</a></li>
-            <br><li><a href="./field-work.html" target="_blank">路上観察</a></li>
+            <br><li><a href="./field-work.html" target="_blank">路上観察</a></li><br>
+            <li><a href="./files/date-hodagaya.pdf">第四回目プレゼンテーションPDF</a></li>
         </ul>
 
 
