--- a/de12/field-work.html
+++ b/de12/field-work.html
@@ -28,7 +28,16 @@
                 気づいたときに少し面白く感じたので撮影した。<br>
 
             </div>
-            <h4 class="tatenizyusen" id="3">変な車止め</h4>
+            <h5 class="tatenizyusen" id="3">与論ノ風</h5>
+            <div class="honbun">
+                <img src="./images/sugoi.jpg" width="40%"><br>
+                １０月１８日の金曜日に最寄り駅にて自分が撮った写真<br>
+                前回同様学校帰りで散策した際に見つけた居酒屋の広告。<br>
+                シンプルな看板に対して一目見ただけでは居酒屋の名前とは思えない名前だったことに面白さを感じたため撮影した。<br>
+                
+
+            </div>
+            <h4 class="tatenizyusen" id="4">変な車止め</h4>
             <div class="honbun">
                 <img src="./images/odd-rock.jpg" width="40%"><br>
                 １０月５日に通学路で自分が撮影した写真<br>
@@ -38,14 +47,15 @@
                 ※追記：出された課題と合わないことに気づいたため、一番下に変更したのちに１３日にまでに二枚分の写真を追加しました。
 
             </div>
+
         </div>
         <nav class="mokuzi">
             <br>
             目次<br>
             <a href="#1">蜂の<br>ハンバーガー</a><br><br>
             <a href="#2">メインが<br>分からなかった広告</a><br><br>
-            <a href="#3">へんな車止め</a><br>
-            <a href="#4"></a><br>
+            <a href="#3">与論ノ風</a><br><br>
+            <a href="#4">変な車止め</a><br>
             
         </nav>
     </article>
