--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -14,6 +14,7 @@
     <h2>演習ノート一覧</h2>
     <ul>
         <li><a href="./pinset.html">第一回：進化したピンセット</a></li>
+        <li><a href="./on-duty.html">第二回：心を動かすもの</a></li>
     </ul>
 
 
