--- a/digi_fab/on-duty.html
+++ b/digi_fab/on-duty.html
@@ -87,13 +87,16 @@
                     <li>文字は入れることができない</li>
                     文字を入れる際に文字のレイヤーがベクター方式にできないため、文字を入れることができない<br><br>
                     <li>線の太さが変わる</li>
-                    clip stadioに限らないがタッチパネル系でイラストを描く際に、力の入れ具合で線の太さがかわる機能がついているソフトがある<br>
-                    そういった機能はアナログで絵を描く感覚で書けるように工夫されたものだがおそらくベクター方式では元の線の太さのみを参照しているらしい<br>
+                    clip stadioに限らないがタッチパネル系でイラストを描く際に、<br>
+                    力の入れ具合で線の太さがかわる機能がついているソフトがある<br>
+                    そういった機能はアナログで絵を描く感覚で書けるように工夫されたものだが<br>
+                    おそらくベクター方式では元の線の太さのみを参照しているらしい<br>
                     そのため力を入れて線を太くしてもSVGファイルにすると線の太さは変わらない
                     <img src="./images/spring-winter/henka.png" width="40%">
                     <img src="./images/spring-winter/henka.svg" width="40%"><br>
                     左がclip stadioのときのイラストで右がSVG変換後
-                    左では細い千なのに右で濃くなっているのは、先述した通り力の入れ具合による太さではなく、設定時の太さを参照しているため
+                    左では細い千なのに右で濃くなっているのは、<br>
+                    先述した通り力の入れ具合による太さではなく、設定時の太さを参照しているため
                     <br><br>
                     
 
