--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -15,6 +15,8 @@
     <ul>
         <li><a href="./pinset.html">第一回：進化したピンセット</a></li>
         <li><a href="./on-duty.html">第二回：心を動かすもの</a></li>
+
+        <li><a href="./watching.html">観察スケッチ</a></li>
     </ul>
 
 
