--- a/de12/index.html
+++ b/de12/index.html
@@ -22,6 +22,7 @@
             <li><a href="./1.html" target="_blank">第一回</a></li>
             <br><li><a href="./field-work.html" target="_blank">路上観察</a></li><br>
             <li><a href="./files/date-hodagaya.pdf">第四回目プレゼンテーションPDF</a></li>
+            <li><a href="./python.html" target="_blank">第七回目ゲームプログラミング</a></li>
         </ul>
 
 
