--- a/de12/index.html
+++ b/de12/index.html
@@ -24,6 +24,7 @@
             <li><a href="./files/date-hodagaya.pdf">第四回目プレゼンテーションPDF</a></li>
             <li><a href="./python.html" target="_blank">第七回目ゲームプログラミング</a></li>
             <li><a href="python2.html">第八回目プログラミング</li>
+            <li><a href="infomation-done.html">第九回目テキストマイニング</a></li>
         </ul>
 
 
