--- a/de12/infomation-done.html
+++ b/de12/infomation-done.html
@@ -2,7 +2,7 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title></title>
+    <title>共起ネットワーク</title>
     <!-- ⑤スタイルシートの設定をしよう -->
     <link rel="stylesheet" href="./css/teststyle.css">
     <!-- h1.htmlからある行をコピペしてくればOK -->
