--- a/de12/infomation-done.html
+++ b/de12/infomation-done.html
@@ -15,7 +15,7 @@
             <h2 class="tatenizyusen" id="1">１．単語頻出</h2>
             <div class="honbun">
                 2024年<br>
-                <img src="./xbp_text_mining-main (3)/xbp_text_mining-main/2024file/2024t.png" width="40%"><br>
+                <img src="./xbp_text_mining-main (3)/1970file/2024t.png" width="40%"><br>
                 1970年<br>
                 <img src="./xbp_text_mining-main (3)/1970file/1970t.png" width="40%"><br>
                 考察<br>
@@ -27,7 +27,7 @@
             <h3 class="tatenizyusen" id="2">２．共起ネットワーク</h2>
             <div class="honbun">
                 2024年<br>
-                <img src="./xbp_text_mining-main (3)/xbp_text_mining-main/2024file/2024k.png" width="40%"><br>
+                <img src="./xbp_text_mining-main (3)/1970file/2024k.png" width="40%"><br>
                 1970年<br>
                 <img src="./xbp_text_mining-main (3)/1970file/1970k.png" width="40%"><br>
                 考察<br>
@@ -38,7 +38,7 @@
             <h4 class="tatenizyusen" id="3">３．サンバースト</h2>
             <div class="honbun">
                 2024年<br>
-                <img src="./xbp_text_mining-main (3)/xbp_text_mining-main/2024file/2024.png" width="40%"><br>
+                <img src="./xbp_text_mining-main (3)/1970file/2024.png" width="40%"><br>
                 1970年<br>
                 <img src="./xbp_text_mining-main (3)/1970file/1970.png" width="40%"><br>
                 考察<br>
