--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -15,7 +15,7 @@
     <ul>
         <li><a href="./pinset.html">第一回：進化したピンセット</a></li>
         <li><a href="./on-duty.html">第二回：心を動かすもの</a></li>
-
+        <li><a href="./katanuki.html">第三回：ソースをメインに</a></li>
         <li><a href="./watching.html">観察スケッチ</a></li>
     </ul>
 
