--- a/de12/index.html
+++ b/de12/index.html
@@ -25,7 +25,7 @@
             <li><a href="./python.html" target="_blank">第七回目ゲームプログラミング</a></li>
             <li><a href="python2.html">第八回目プログラミング</li>
             <li><a href="infomation-done.html">第九回目テキストマイニング</a></li>
-            <li><a href="./model.html">第十二回目インタビュー</a></li>
+            <li><a href="./question.html">第十二回目インタビュー</a></li>
         </ul>
 
 
