--- a/de12/question.html
+++ b/de12/question.html
@@ -8,7 +8,7 @@
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
-    <h1 class="daimei" style="color:white"></h1>
+    <h1 class="daimei" style="color:white">インタビュー</h1>
     <article>
         <div class="main">
             <h2 class="tatenizyusen" id="1">１．質問</h2>
@@ -48,9 +48,9 @@
         <nav class="mokuzi">
             <br>
             目次<br>
-            <a href="#1"></a><br>
-            <a href="#2"></a><br>
-            <a href="#3"></a><br>
+            <a href="#1"></a>質問<br>
+            <a href="#2"></a>付属写真<br>
+            <a href="#3"></a>参照リンク<br>
 
         </nav>
     </article>
