--- a/de12/question.html
+++ b/de12/question.html
@@ -48,9 +48,9 @@
         <nav class="mokuzi">
             <br>
             目次<br>
-            <a href="#1"></a>質問<br>
-            <a href="#2"></a>付属写真<br>
-            <a href="#3"></a>参照リンク<br>
+            <a href="#1">質問</a><br>
+            <a href="#2">付属写真</a><br>
+            <a href="#3">参照リンク</a><br>
 
         </nav>
     </article>
