--- a/de12/index.html
+++ b/de12/index.html
@@ -20,12 +20,13 @@
         <h2>演習ノート一覧</h2>
         <ul>
             <li><a href="./1.html" target="_blank">第一回</a></li>
-            <br><li><a href="./field-work.html" target="_blank">路上観察</a></li><br>
+            <li><a href="./field-work.html" target="_blank">路上観察</a></li>
             <li><a href="./files/date-hodagaya.pdf">第四回目プレゼンテーションPDF</a></li>
             <li><a href="./python.html" target="_blank">第七回目ゲームプログラミング</a></li>
             <li><a href="python2.html">第八回目プログラミング</li>
             <li><a href="infomation-done.html">第九回目テキストマイニング</a></li>
-            <li><a href="./question.html">第十二回目インタビュー</a></li>
+            <li><a href="./question.html">第十一回目インタビュー</a></li>
+            <li><a href="./inteview-network.html">第十二回インタビューのテキストマイニング</a></li>
         </ul>
 
 
