--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -17,6 +17,7 @@
         <li><a href="./on-duty.html">第二回：心を動かすもの</a></li>
         <li><a href="./katanuki.html">第三回：ソースをメインに</a></li>
         <li><a href="./watching.html">観察スケッチ</a></li>
+        <li><a href="./manaita.html">第四回；まな板置き場</a></li>
     </ul>
 
 
