--- a/de12/index.html
+++ b/de12/index.html
@@ -27,6 +27,7 @@
             <li><a href="infomation-done.html">第九回目テキストマイニング</a></li>
             <li><a href="./question.html">第十一回目インタビュー</a></li>
             <li><a href="./inteview-network.html">第十二回インタビューのテキストマイニング</a></li>
+            <li><a href="./files/NOSH.pdf">USP</a></li>
         </ul>
 
 
