--- a/de12/test.html
+++ b/de12/test.html
@@ -16,7 +16,7 @@
             test2
         </nav>
         <div class="main">
-            <h1 class="tatenizyusen">見出し１</h1>
+            <h1 class="tatenizyusen">見出しiii</h1>
             <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
             <div class="waku" class="honbun">
             <u>HTMLの主な構成について</u>
