--- a/de34/index.html
+++ b/de34/index.html
@@ -17,7 +17,7 @@
         </ol>
         <h2>演習ノート一覧</h2>
         <ul>
-            <li></li>
+            <li><a href="./program.html" target="_blank">第一回：プログラムでモノを動かす</a></li>
         </ul>
         <h3>個人製作</h3>
         <ul>
