--- a/de34/PP/PP.html
+++ b/de34/PP/PP.html
@@ -4,18 +4,18 @@
     <!-- ⑥↓タイトルを変えてみよう -->
     <title>個人製作：しっぽ</title>
     <!-- ⑤スタイルシートの設定をしよう -->
-    <link rel="stylesheet" href="./css/teststyle.css">
+    <link rel="stylesheet" href="../css/teststyle.css">
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
-    <h1 class="daimei" style="color:white">個人製作：しっぽ</h1>
+    <h1 class="daimei" style="color:white">個人製作：しっぽー関節ー</h1>
     <article>
         <div class="main">
             <h2 class="tatenizyusen" id="1">１．趣旨</h2>
             <div class="honbun">
                 大学でFABラボがあったり、授業でプログラム等を学ぶしせっかくだから何か作ろうの会<br>
                 今考えているのはしっぽ状の何かを作ろうと考えている<br>
-                おそらく難易度的に頓挫するかXビジネスの予定を見るに最終課題にするかもしれない
+                おそらく難易度的に頓挫するかXビジネスの予定を見るに最終課題にするかもしれない(できるのか？)
             </div>
             <h3 class="tatenizyusen" id="2">２．構想</h3>
             <div class="honbun">
@@ -30,11 +30,12 @@
                 だが非常にめんどくさいのとそういった大きさのものを作ってみるノウハウが一切ないことを考え<br>
                 とりあえずどんなふうになるかの確認をするために関節部分を作ってみる<br>
                 最低限の構想としてイラストは書いたので後で貼っておくことにする<br>
-                <img src="./pp_image/lowerjoint.png" width="40%"><br>
-                <img src="./pp_image/higherjoint.png" width="40%"><br>
-                <img src="./pp_image/jointsjoint.png" width="40%"><br>
+                <img src="../pp_image/lowerjoint.png" width="40%"><br>
+                <img src="../pp_image/higherjoint.png" width="40%"><br>
+                <img src="../pp_image/jointsjoint.png" width="40%"><br>
                 ただ今でも出ている問題として、プリント時間が長すぎることがネック<br>
                 いま設計している段階での大きさがおそらく一番ちょうどいいはず<br>
+                ↑追記：そんなことはなかった
             </div>
             <div class="maruumewaku" id="4">
 
