--- a/de34/index.html
+++ b/de34/index.html
@@ -21,7 +21,8 @@
         </ul>
         <h3>個人製作</h3>
         <ul>
-            <li><a href="./PP.html" target="_blank">関節ー１ー</a></li>
+            <li><a href="./PP/PP.html" target="_blank">関節ー１ー</a></li>
+            <li><a href="./PP/pp-2.html" target="_blank">関節ー２ー</a></li>
         </ul>
 
 
