--- a/de34/PP/pp-2.html
+++ b/de34/PP/pp-2.html
@@ -61,9 +61,9 @@
         <nav class="mokuzi">
             <br>
             目次<br>
-            <a href="#1">趣旨</a><br>
-            <a href="#2">構想</a><br>
-            <a href="#3">設計</a><br>
+            <a href="#1">進捗と問題</a><br>
+            <a href="#2">問題について</a><br>
+            <a href="#3">総評</a><br>
 
         </nav>
     </article>
