--- a/de34/index.html
+++ b/de34/index.html
@@ -18,6 +18,7 @@
         <h2>演習ノート一覧</h2>
         <ul>
             <li><a href="./program.html" target="_blank">第一回：プログラムでモノを動かす</a></li>
+            <li><a href="./Iot.html" target="_blank">第二回：IOTに関して</a></li>
         </ul>
         
         <h3>個人製作</h3>
