--- a/de34/program.html
+++ b/de34/program.html
@@ -14,7 +14,7 @@
             <h2 class="tatenizyusen" id="1">１．どんなものがあるか</h2>
             <div class="honbun">
                 グループで出し合ったポストイット画像<br>
-                身近に多いように見えて思ったより少ない？
+                身近に多いように見えて思ったより少ない？<br>
                 <img src="./images/1/postit1.jpg" width="40%"><br>
             </div>
             <h3 class="tatenizyusen" id="2">２．プログラム的思考で説明</h3>
@@ -26,7 +26,7 @@
             <h4 class="tatenizyusen" id="3">３．アイデアのスケッチ</h4>
             <div class="honbun">
                 日常生活の動作や作業を手伝ってくれるしっぽ<br>
-                腰のあたりにあるかつアーム式じゃないから重心的にもかさばり的にもちょうどいい？
+                腰のあたりにあるかつアーム式じゃないから重心的にもかさばり的にもちょうどいい？<br>
                 <img src="./images/1/tail.jpg" width="40%"><br>
             </div>
 
