--- a/de34/Iot.html
+++ b/de34/Iot.html
@@ -14,7 +14,8 @@
             <h2 class="tatenizyusen" id="1">１．Iotとは何か</h2>
             <div class="honbun">
                 Iotとは、Internet of thingsの略称で「もののインターネット」ともよばれる。<br>
-                ものをインターネットに接続し、サーバーを介して遠隔から操作したりするもののこと<br>
+                さまざまなものをインターネットに接続し、サーバーを介して遠隔から操作したり、<br>
+                相互に情報交換をする仕組みのこと<br>
 
 
 
