--- a/de34/PP/pp-3.html
+++ b/de34/PP/pp-3.html
@@ -41,7 +41,16 @@
                 縮尺を小さくして解決するならそれでいいがおそらくまた接続部の設計が必要になると考えられる<br>
             </div>
             <div class="maruumewaku" id="4">
+                今後の予想される課題一覧：<br>
+                強度が今後足りるのか・ひもの引っ張りを利用した構造はうまくいくのか<br>
+                曲げるときにかくつかないか・動作の精密性は良好か⇒全体ができてからしか具体的にはわからない<br>
+                音声認識はつけたとしてどうするのか・水平装置はどうするか⇒ソフトウェアとの兼ね合いもある<br><br>
 
+                現状から考えて置ける課題:<br>
+                細かな動きをするために先のほうの構造をどうするのか⇒なんとなく構想は浮かび始めてはいるくらい<br><br>
+
+                完成像の認識:<br>
+                何をできるようにするのか＝ものを持てる・取れる・体を支えられる（60～70％くらいのイメージ像）<br>
             </div>
 
         </div>
