--- a/de34/PP/pp-3.html
+++ b/de34/PP/pp-3.html
@@ -26,7 +26,7 @@
                 ただし、３Dプリンターの使い方がまだまだ未熟なためか全体的にきつくなりすぎな気もする<br>
                 組み立てる際にかなり力を要するため、がたつきはほぼなくなったが一時分解することも面倒に<br>
                 これもまたミリ単位の調整が設計全体に必要かも（変に調整するより今のままでもいい気もする）<br>
-
+                <img src="../pp_image/2025.04.21-part3&4/precomp.jpg" width="40%"><br>
                 間接の傾き具合に関しても約３０度ほどだったのを４０～４５度程にするために上側部分の支柱にあたる<br>
                 所を細く再設計した<br>
                 多少強度の心配はでるものの動かした具合はかなりよく感じる<br>
