--- a/de34/PP/pp-4.html
+++ b/de34/PP/pp-4.html
@@ -26,7 +26,7 @@
                 今回はひもで引っ張って動くかどうかの確認を行ったがほぼ良好に動作した。<br>
                 途中間接にがたつきが出てきたため間接上側の球体をやすりで整えた<br>
                 今後も多少のがたつきはやすりで整えるようにして調整していくつもりである<br>
-                
+                <img src="../pp_image/2025.04.21-part3&4/ひも.jpg" width="40%"><br>
                 ただ今後にも響きそうな課題としてひもをどのようなものにするのかの問題が出てくるかも<br>
                 現在はひも一本を通して確認を行ったが、今後はひもを二本・三本使う可能性もあるため<br>
                 種類によってはひもを通す側の穴を広くするか、ひもをもっと細いものにする可能性もある<br>
