--- a/de34/PP/pp-4.html
+++ b/de34/PP/pp-4.html
@@ -5,7 +5,7 @@
     <title>個人製作：しっぽ
     </title>
     <!-- ⑤スタイルシートの設定をしよう -->
-    <link rel="stylesheet" href="./css/teststyle.css">
+    <link rel="stylesheet" href="../css/teststyle.css">
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
