--- a/de34/index.html
+++ b/de34/index.html
@@ -20,6 +20,7 @@
             <li><a href="./program.html" target="_blank">第一回：プログラムでモノを動かす</a></li>
             <li><a href="./Iot.html" target="_blank">第二回：IOTに関して</a></li>
             <li><a href="./senser.html" target="_blank">第三回：IOTによるデータ保存</a></li>
+            <li><a href="./paripi.html" target="_blank">第四回：自由制作</a></li>
         </ul>
         
         <h3>個人製作</h3>
