--- a/de34/PP/pp-5.html
+++ b/de34/PP/pp-5.html
@@ -21,25 +21,39 @@
             <div class="honbun">
                 今回で目標としていた一区画が完成した<br>
                 そのためひもで引っ張るときの挙動や軽く重さの確認までできた<br>
+                
+                <img src="../pp_image/2025.05.12-part5&6/honegumi.jpg" width="40%"><br>
                 ひもの挙動での問題として、手前の関節と奥の関節でひもをそれぞれ独立させる必要があり<br>
                 結果、駆動部分での考慮が必要となりそうだった<br>
-                また奥の関節につなげるひもは手前のよりも長めに引っ張らなければ
+                また奥の関節につなげるひもは手前のものの二倍引っ張らなければならなかった<br>
+                重さに関しては重量約160gであり、ここから全体の重量をざっくりと考えると約550gほどになるのではと考えている<br>
             </div>
             <h3 class="tatenizyusen" id="3">３．総評</h3>
             <div class="honbun">
-
+                関節部分の一区間が完成し、今後の全貌がかなり明らかになった<br>
+                駆動部分での工夫がかなり必要とされるように感じたが、関節部分のみでいえばかなり順調である<br>
+                ただし一点のみ、一関節を組み合わせる際のつっかえ棒のようなものが今後重量により壊れる可能性は高い気がする<br>
             </div>
             <div class="maruumewaku" id="4">
+                今後の予想される課題一覧：<br>
+                強度が今後足りるのか・ひもの引っ張りを利用した構造はうまくいくのか⇒強度面での不安がわずかにアリ<br>
+                曲げるときにかくつかないか・動作の精密性は良好か⇒やすり等で球があるほうの関節を滑らかにすればOKかも<br>
+                音声認識はつけたとしてどうするのか・水平装置はどうするか⇒ソフトウェアとの兼ね合いもある<br><br>
 
+                現状から考えて置ける課題:<br>
+                細かな動きをするために先のほうの構造をどうするのか⇒おもに現在できている部分の縮小版で行けそう<br><br>
+
+                完成像の認識:<br>
+                何をできるようにするのか＝ものを持てる・取れる・体を支えられる（60～70％くらいのイメージ像）<br>
             </div>
 
         </div>
         <nav class="mokuzi">
             <br>
             目次<br>
-            <a href="#1"></a><br>
-            <a href="#2"></a><br>
-            <a href="#3"></a><br>
+            <a href="#1">進捗と問題</a><br>
+            <a href="#2">問題について</a><br>
+            <a href="#3">総評</a><br>
 
         </nav>
     </article>
