--- a/de34/index.html
+++ b/de34/index.html
@@ -29,6 +29,8 @@
             <li><a href="./PP/pp-2.html" target="_blank">関節ー２ー</a></li>
             <li><a href="./PP/pp-3.html" target="_blank">関節ー３ー</a></li>
             <li><a href="./PP/pp-4.html" target="_blank">関節ー４ー</a></li>
+            <li><a href="./PP/pp-5.html" target="_blank">関節ー５ー</a></li>
+            <li><a href="./PP/pp-6.html" target="_blank">駆動ー１ー</a></li>
         </ul>
     
 
