--- a/de34/index.html
+++ b/de34/index.html
@@ -22,6 +22,7 @@
             <li><a href="./senser.html" target="_blank">第三回：IOTによるデータ保存</a></li>
             <li><a href="./paripi.html" target="_blank">第四回：自由制作</a></li>
             <li><a href="./drink.html" target="_blank">第五回：コレスポンデンス分析</a></li>
+            <li><a href="./seisaku.html" target="_blank">第六回：最終課題</a></li>
         </ul>
         
         <h3>個人製作</h3>
