--- a/de34/seisaku.html
+++ b/de34/seisaku.html
@@ -27,7 +27,7 @@
             <div class="honbun">
                 まず第一に、先ほど述べたように今二つの案があるがそれぞれ<br>
                 　ロボットアームを作る案（作りたい方）<br>
-                　・難易度：激高<br>
+                　・難易度：激高（必要となる機器が存在しないため不可能？）<br>
                 　・製作費用：１～５万→製作完了前に破産するかも<br>
                 　・製作に要する時間：自分の想定・計画が寸分もたがわず進行したらおよそ２～３か月・<br>
                 　歯車装飾の照明を作る案（代替案）<br>
@@ -37,7 +37,7 @@
                 となっており、ロボットアームのほうはかなり厳しく、製作期間で終わらない可能性が高い。<br>
                 のでメインは歯車装飾の照明を作る法にしようと考えている<br>
                 だが、余裕ができて電子回路やその他の扱いに慣れ始めたら、<br>
-                めちゃくちゃ悔しいので想定しているものより簡易なロボットアームを作る<br>
+                めちゃくちゃ悔しいので想定しているものより超簡易なロボットアームを作る<br>
 
 
                 
