--- a/de34/seisaku.html
+++ b/de34/seisaku.html
@@ -34,7 +34,7 @@
                 　・難易度：普通<br>
                 　・製作費用：安くて千五百円高くても五千円くらい<br>
                 　・製作に要する時間：１～２カ月程度<br>
-                となっており、ロボットアームのほうはかなり厳しく、製作期間で終わらない可能性が高い。<br>
+                となっており、ロボットアームのほうはかなり厳しく、設計段階でさえ製作期間で終わらない可能性が高い。<br>
                 のでメインは歯車装飾の照明を作る法にしようと考えている<br>
                 
 
