--- a/de34/PP/pp-7.html
+++ b/de34/PP/pp-7.html
@@ -34,9 +34,7 @@
             </div>
             <h3 class="tatenizyusen" id="3">３．総評</h3>
             <div class="honbun">
-                関節部分の一区間が完成し、今後の全貌がかなり明らかになった<br>
-                駆動部分での工夫がかなり必要とされるように感じたが、関節部分のみでいえばかなり順調である<br>
-                ただし一点のみ、一関節を組み合わせる際のつっかえ棒のようなものが今後重量により壊れる可能性は高い気がする<br>
+                今までの関節設計が使えなくなったものの一応順調に設計していけているといえる<br>
             </div>
             <div class="maruumewaku" id="4">
                 今後の予想される課題一覧：<br>
