--- a/de34/PP/pp-8.html
+++ b/de34/PP/pp-8.html
@@ -13,13 +13,13 @@
         <div class="main">
             <h2 class="tatenizyusen" id="1">１．進捗と問題</h2>
             <div class="honbun">
-                駆動部分制作の進捗：前回作った減速機のテスト・製作可能であるかを調べた<br>
+                駆動部分制作の進捗：減速機の再テスト・製作可能であるかを調べた<br>
                 過程で出てきた問題：PLAの強度問題・電源の用意の困難さ等<br>
                 今後の課題：モーターも含めた全体の見直し（ほぼ考えの白紙化）<br>
             </div>
             <h3 class="tatenizyusen" id="2">２．問題について</h3>
             <div class="honbun">
-                前回設計した減速機をつかって今テストしたところ、想定をはるかに下回る値の重さしか持ち上げられなかった。<br>
+                前回設計していた減速機をつかって再テストしたところ、想定をはるかに下回る値の重さしか持ち上げられなかった。<br>
                 授業が最終課題に取り掛かり始めたため、最終課題の題材にしてよいか判断するためにも、チャットGPTも使って<br>
                 いろいろと計算しなおした。<br><Br>
 
