--- a/de34/seisaku.html
+++ b/de34/seisaku.html
@@ -48,8 +48,10 @@
                 　光で照らされる歯車の設計・全体の設計→モーター駆動とライトのプログラム→全体のテスト<br>
                 　現在考えられる確実に必要なもの：<br>
                 　　（ステッピングorサーボ）モーター×１・単三電池二つほど・LEDライト（変色可）・照度センサー・モータードライバー
-                　　見栄え用の色付ける何か<br>
-                
+                　　見栄え用の色付ける何か<br><br>
+                2025/06/02全体の設計の途中・テストで歯車を印刷した。テスト結果は問題なし。
+                <img src="./images/testsyoumei.jpg" width="40%"><br>
+
 
                 
 
