--- a/de34/seisaku.html
+++ b/de34/seisaku.html
@@ -55,7 +55,12 @@
                 また、pythonのほうでQRコードを読み込む方法でトグル式スイッチのプログラムを作れたため、<br>
                 サーバーとのやり取りのプログラムもテスト完了<Br>
                 <img src="./images/marukatati.jpg" width="40%"><br>
-                やるべきこと：モータードライバーとLEDライトと電池入れの購入・テスト  土台の印刷<br>
+                やるべきこと：モータードライバーとLEDライトと電池入れの購入・テスト  土台の印刷<br><br>
+                2025/06/16土台の印刷が完了・全体像が仮で完成・電子部品を購入した<br>
+                モーターをモータードライバーを使って制御するテストも成功した<br>
+                土台について、モーターのトルクが足りなく、回すことができなかったのでそこを修正するために減速機を作って再設計した<br>
+                <img src="./images/zentaizou.jpg" width="40%"><br>
+                やるべきこと：ライトのテスト・改良版土台の印刷・全体の動作のテスト
 
 
                 
