--- a/de34/seisaku.html
+++ b/de34/seisaku.html
@@ -82,7 +82,16 @@
                 <img src="./images/IMG_1187.jpg" width="40%"><br>
                 <img src="./images/IMG_1188.jpg" width="40%"><br>
                 ライトとモーターについても、土台を変えても動作したので動画づくりに移ってよい気がする<br>
-                やるべきこと:動画づくり・コレスポンデンス分析の実施
+                やるべきこと:動画づくり・コレスポンデンス分析の実施<br><br>
+
+                2025/07/06やったこと：動画づくり<br>
+                動画の基本的なところを作り終えた。余裕があったら後から少し製作部分を載せたりする。<br>
+                <iframe width="560" height="315" src="https://youtu.be/7zc_OA9UImw?si=uugn8_RyzEKvx-6S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <br>
+                またできるなら、コレスポンデンス分析もしておく<br>
+                やるべきこと:（コレスポンデンス分析）
+
+
 
                 
 
@@ -98,7 +107,8 @@
                 チャットGPT<br>
                 <a href="https://d-monoweb.com/blog/planetary-geartrain/" target="_blank">遊星歯車列の減速比の決め方と諸元計算</a><br>
                 <a href="https://www.i-deak.jp/case-study/worm-selflock-2/" target="_blank">【機構設計】減速機構 －平歯とウォーム</a><br>                                
-                <a href="https://www.i-deak.jp/case-study/planetary-gear-2/" target="_blank">【機構設計】減速機構 －遊星歯車</a><br><br>   
+                <a href="https://www.i-deak.jp/case-study/planetary-gear-2/" target="_blank">【機構設計】減速機構 －遊星歯車</a><br>
+                <a href="https://youtu.be/JLUo5uMjfH0?si=Q9KtVis6LGEhWcKd" target="_blank">【見よう見まねで学ぶ】Fusion360で傘歯車を設計しよう！</a><br><br>  
                 
                 電子機器類<br>
                 elegoo-unoR3・
