--- a/de34/seisaku.html
+++ b/de34/seisaku.html
@@ -86,8 +86,7 @@
 
                 2025/07/06やったこと：動画づくり<br>
                 動画の基本的なところを作り終えた。余裕があったら後から少し製作部分を載せたりする。<br>
-                <iframe width="560" height="315" src="https://youtu.be/7zc_OA9UImw?si=uugn8_RyzEKvx-6S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/7zc_OA9UImw?si=mnBya0ikQzMbxuFb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
                 またできるなら、コレスポンデンス分析もしておく<br>
                 やるべきこと:（コレスポンデンス分析）
 
