--- a/de34/seisaku.html
+++ b/de34/seisaku.html
@@ -168,6 +168,7 @@
                 <a href="https://www.i-deak.jp/case-study/worm-selflock-2/" target="_blank">【機構設計】減速機構 －平歯とウォーム</a><br>                                
                 <a href="https://www.i-deak.jp/case-study/planetary-gear-2/" target="_blank">【機構設計】減速機構 －遊星歯車</a><br>
                 <a href="https://youtu.be/JLUo5uMjfH0?si=Q9KtVis6LGEhWcKd" target="_blank">【見よう見まねで学ぶ】Fusion360で傘歯車を設計しよう！</a><br> 
+                <a href="https://qiita.com/MORIMOTO520212/items/e9624c3fa45e40b0425e" target="_blank">Arduino - TB6612FNG(SparkFun ROB-14450)の制御方法</a><br> 
                 <a href="https://qiita.com/hextomino/items/e1a8fce46f31f8935aca" target="_blank">ArduinoでTapeLEDを制御する</a><br>
                 <a href="https://www.youtube.com/watch?v=FnQsow6iT5c" target="_blank">からくりすと氏：(3+3+3+3)+3軸トゥールビヨンを作ってみた</a><br>
                 <a href="https://www.youtube.com/watch?v=A8oWZus3Nf8" target="_blank">からくりすと氏：手のひらサイズのからくりを作ってみた 5</a><br><br>
