--- a/de56/sketch.html
+++ b/de56/sketch.html
@@ -26,9 +26,27 @@
 
 
             </div>
-            <h3 class="tatenizyusen" id="2">２．</h3>
+            <h3 class="tatenizyusen" id="2">２．簡単心療</h3>
             <div class="honbun">
-
+                心療内科の病院では予約が取りにくく、予約が取れても一か月以上後といったことも珍しくない<br>
+                そのうえで、心療内科では精神面での治療になるため病院との相性も大事となるため<br>
+                せっかく予約を取ったのに相性が悪くて通院ができないといった問題も起こる<br>
+                そこで一時的にはじめて心療内科に行く人が先に訪れてその人の症状の確認や相性等を考えて通えそうな病院を<br>
+                割り当てるいわば「初診だけ行く病院」があれば予約に悩まされることなく、迅速に治療を始めるとこができると考えた<br>
+                <img src="./images/hospital.jpg" width="40%"><br>
+            </div>
+            <h3 class="tatenizyusen" id="2">３．常識崩し</h3>
+            <div class="honbun">
+                よく地震や事故、もしくは障害や貧困といったものの話について子供のころによく聞かされた<br>
+                地震や事故に関しては特に事前に準備したり、気を付けるように言われると思われる<br>
+                しかし、どれだけその話を聞いた人が真剣にそのことについて考えていても心の中では<br>
+                「そんなことは多分起こらないだろう」と無意識に思ってしまっている可能性がある<br>
+                また地震のようにその人自身にもとから経験があったり、地震体験装置（部屋全体を揺らす機器）等で<br>
+                体験したりすることができるものならば多少は実体験ができるが、世代間・性別間のギャップや精神障害者の苦悩といった<br>
+                ものはその人自身にでもならない限り実体験することは難しい<br>
+                そこでVRと専用の部屋等によって「参考になった」というレベルではなく「焦りがでた」と思うレベルの実体験を<br>
+                できるようにすることによって他者理解や重要性の理解をしやすくなるようなものがあればよいと考えた<br>
+                <img src="./images/nomal-no.jpg" width="40%"><br>
             </div>
             <div class="maruumewaku" id="3">
 
@@ -39,8 +57,8 @@
             <br>
             目次<br>
             <a href="#1">簡単一括セット</a><br>
-            <a href="#2"></a><br>
-            <a href="#3"></a><br>
+            <a href="#2">簡単心療</a><br>
+            <a href="#3">常識崩し</a><br>
 
         </nav>
     </article>
