--- a/de56/index.html
+++ b/de56/index.html
@@ -10,7 +10,8 @@
     <logotohome>
     <a href="../index.html"><img src="./images/0_XBlogo.png" alt=""></a>
     </logotohome>
-    <h1>デザイン演習Ⅲ・Ⅳ</h1>
+    <h1>デザイン演習Ⅴ・Ⅵ
+    </h1>
         <h2>HTMLに関すること</h2>
         <ol>
             <li></li>
