--- a/de56/index.html
+++ b/de56/index.html
@@ -19,6 +19,7 @@
         <h2>演習ノート一覧</h2>
         <ul>
             <li><a href="./sketch.html" target="_blank">世の中に存在する課題の発見</a></li>
+            <li><a href="./businessmodel.html" target="_blank">ビジネスモデル</a></li>
         </ul>
         
         <h3>個人製作</h3>
