--- a/de56/businessmodel.html
+++ b/de56/businessmodel.html
@@ -11,10 +11,23 @@
     <h1 class="daimei" style="color:white">ビジネスモデル</h1>
     <article>
         <div class="main">
-            <h2 class="tatenizyusen" id="1">１．おまとめプラン</h2>
+            <h2 class="tatenizyusen" id="1">１．個人企画</h2>
             <div class="honbun">
-                前回の簡単一括セットをビジネスモデルプランにしたもの<br>
+                前回の簡単一括セットをビジネスモデル図解にしたもの<br>
                 <img src="./images/businessmodel.png" width="60%"><br>
+            </div>
+            <h2 class="tatenizyusen" id="1">２．グループでの企画</h2>
+            <div class="honbun">
+                さまざまなイベントの情報をマップに記して簡単にイベントに参加しやすくする企画・提案元：Nickさん<br>
+                <img src="./images/businessmodelplan1.png" width="60%"><br>
+            </div>
+            <h2 class="tatenizyusen" id="2">３．ビジネスモデルキャンパス</h2>
+            <div class="honbun">
+                ビジネスモデルキャンパスでグループ企画のものをあてはめたもの<br>
+                <img src="./images/businessmoderlplan2.png" width="60%"><br>
+            </div>
+            <div class="maruumewaku" id="3">
+                グループメンバー：Nickさん・みつをさん・satoさん
             </div>
             
 
@@ -22,9 +35,9 @@
         <nav class="mokuzi">
             <br>
             目次<br>
-            <a href="#1">おまとめプラン</a><br>
-            <a href="#2"></a><br>
-            <a href="#3"></a><br>
+            <a href="#1">個人企画</a><br>
+            <a href="#2">グループでの企画</a><br>
+            <a href="#3">ビジネスモデルキャンパス</a><br>
 
         </nav>
     </article>
